kubernetes/mini/apps/downloads/sabnzbd/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sabnzbd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: homepage
            io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs: # linux isos
        - matchPattern: "*.blocknews.net"
        - matchPattern: "*.frugalusenet.com"
        - matchName: "sabnzbd.org"
      toPorts:
        - ports:
            - port: "563"
    - toCIDRSet: # nas
        - cidr: 192.168.1.234/32
